Fix wrapping on code tag so that the content scrolls.

--- a/src/htdocs/css/_text.scss
+++ b/src/htdocs/css/_text.scss
@@ -37,6 +37,7 @@ code {
 
 code {
 	font-size: 0.8em;
+	word-wrap: normal;
 }
 
 pre {
